# mnn-segment-anything

./: README.md
cpp/: CMakeLists.txt  README.md  sam_demo.cpp
python/: README.md  segment_anything_example.py
